FEAT: PDF Integrado Ao App.